// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<StatsDisplay /> > Code Changes Display > displays Code Changes when line counts are present 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 1 (✓ 1 ✗ 0)    100.0% Success                                       │
│  Code Changes:               +42 -18                                                             │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               100ms (API 0.0%, Tool 100.0%)                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > Code Changes Display > hides Code Changes when no lines are added or removed 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 1 (✓ 1 ✗ 0)    100.0% Success                                       │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               100ms (API 0.0%, Tool 100.0%)                                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in green for high values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 10 (✓ 10 ✗ 0)    100.0% Success                                     │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s (API 0.0%, Tool 0.0%)                                            │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in red for low values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 10 (✓ 5 ✗ 5)    50.0% Success                                       │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s (API 0.0%, Tool 0.0%)                                            │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in yellow for medium values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 10 (✓ 9 ✗ 1)    90.0% Success                                       │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s (API 0.0%, Tool 0.0%)                                            │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > Conditional Rendering Tests > renders the model usage table with a 0.0% Cache Hit when no cache is used 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 0 (✓ 0 ✗ 0)    0.0% Success                                         │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               100ms (API 100.0%, Tool 0.0%)                                       │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                                                                                     │
│                                                                                                  │
│  Model                           Reqs  Input Tokens  Cache Hit  Output Tokens                    │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  gemini-2.5-pro                     1           100       0.0%            100                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > Title Rendering > renders the custom title when a title prop is provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Agent powering down. Goodbye!                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 0 (✓ 0 ✗ 0)    0.0% Success                                         │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s (API 0.0%, Tool 0.0%)                                            │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > Title Rendering > renders the default title when no title prop is provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 0 (✓ 0 ✗ 0)    0.0% Success                                         │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s (API 0.0%, Tool 0.0%)                                            │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > displays gemini-3-flash model names as-is in the model usage table 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 0 (✓ 0 ✗ 0)    0.0% Success                                         │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               3.0s (API 100.0%, Tool 0.0%)                                        │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                                                                                     │
│                                                                                                  │
│  Model                           Reqs  Input Tokens  Cache Hit  Output Tokens                    │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  gemini-3-flash                     5         2,000      25.0%          3,000                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > renders Interaction Summary and Performance sections in its zero state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 0 (✓ 0 ✗ 0)    0.0% Success                                         │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s (API 0.0%, Tool 0.0%)                                            │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > renders a table with two models correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 0 (✓ 0 ✗ 0)    0.0% Success                                         │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               19.5s (API 100.0%, Tool 0.0%)                                       │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                                                                                     │
│                                                                                                  │
│  Model                           Reqs  Input Tokens  Cache Hit  Output Tokens                    │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  gemini-2.5-pro                     3         1,000      50.0%          2,000                    │
│  gemini-2.5-flash                   5        25,000      40.0%         15,000                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > renders all sections when all data is present 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 2 (✓ 1 ✗ 1)    50.0% Success                                        │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               223ms (API 44.8%, Tool 55.2%)                                       │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                                                                                     │
│                                                                                                  │
│  Model                           Reqs  Input Tokens  Cache Hit  Output Tokens                    │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  gemini-2.5-pro                     1           100      50.0%            100                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<StatsDisplay /> > renders role breakdown correctly under models 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 0 (✓ 0 ✗ 0)    0.0% Success                                         │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               10.0s (API 100.0%, Tool 0.0%)                                       │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                                                                                     │
│                                                                                                  │
│  Model                           Reqs  Input Tokens  Cache Hit  Output Tokens                    │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  gemini-2.5-flash                  10         1,200      16.7%          2,000                    │
│    ↳ main                           7           900      11.1%          1,500                    │
│    ↳ utility_tool                   3           300      33.3%            500                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
